# lorenz-da-lab

./: README.md  pyproject.toml
configs/model/: lorenz63.yaml  lorenz96.yaml
docs/: roadmap.md
environment/: environment.yml
notebooks/: 01_lorenz63_forward_euler.ipynb  02_lorenz63_3dvar_euler.ipynb  03_lorenz63_tlm_check.ipynb  04_lorenz63_adjoint_check.ipynb  05_lorenz63_4dvar_euler.ipynb  06_lorenz63_ai_surrogate.ipynb  07_lorenz63_enkf_euler.ipynb  08_lorenz63_enoi_euler.ipynb  08_lorenz96_enkf.ipynb  09_lorenz63_enoi_euler.ipynb  09_lorenz96_enkf.ipynb
src/lorenz_da/adjoint/: lorenz63_adjoint.py
src/lorenz_da/ai/: dataset.py  models.py  train.py
src/lorenz_da/assimilation/: enkf.py  enoi.py  four_dvar.py  localization.py  three_dvar.py
src/lorenz_da/models/: lorenz63.py  lorenz96.py
src/lorenz_da/numerics/: euler.py  rk4.py
src/lorenz_da/observations/: operator.py  synthetic.py
src/lorenz_da/tlm/: lorenz63_tlm.py
src/lorenz_da/utils/: diagnostics.py  io.py
tests/: test_ai.py  test_enkf.py  test_enoi.py  test_four_dvar.py  test_io.py  test_localization.py  test_lorenz96.py  test_rk4.py
